Changed some parts so the .xpi should work correctly and should log to console

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flexiblewebsiteaddon",
   "title": "flexibleWebsiteAddon",
-  "id": "jid1-8BnVF5Eu5s6FbA",
+  "id": "flexibleWebsiteAddon",
   "description": "a basic add-on",
   "author": "",
   "license": "MPL 2.0",
